--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "watch": "ng build --watch",
+    "test": "ng test",
+    "build-single": "npm run build && npx gulp",
+    "start-single": "npx gulp watch"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +29,8 @@
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "gulp": "^4.0.2",
+    "gulp-inline": "^0.1.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
